# slowly.py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: deply.yml  ghpages.yml  pypi.yml
demo/: client.py
docs/: conf.py  index.rst  modules.rst  slowly.models.rst  slowly.rst
slowly/: __init__.py  auth.py  client.py  errors.py  http.py  state.py
slowly/models/: __init__.py  abc.py  letter.py  user.py
