[tool.poetry]
name = "slowly.py"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]
readme = "README.md"
packages = [{include = "slowly"}]

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.11.11"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.0.1"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
